--- a/client/src/css/containers/EditorContainer.module.css
+++ b/client/src/css/containers/EditorContainer.module.css
@@ -1,6 +1,7 @@
 .documentViewer {
   display: grid;
-  grid-template-columns: auto 1fr;
+  width: 100vw;
+  grid-template-columns: var(--menuDrawerWidth) calc(100vw - var(--menuDrawerWidth));
 }
 .documentViewer__editorContainer {
   display: grid;
